# siriusx-cuda-learn

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.kilocode/rules/: rules.md
src/: CMakeLists.txt
src/course1/: CMakeLists.txt  hello.cu
